2009-02-12  Armin Burgmeier  <armin@openismus.com>

	* glom/mode_design/fields/box_db_table_definition.cc
	(check_field_change): Check field's glom type directly instead of
	guessing the glom type from its GType, which might produce a wrong
	result with some of the fallback types used with SQLite.

	* glom/libglom/connectionpool_backends/sqlite.cc (recreate_table):
	Don't crash if transaction rollback fails without the error variable
	being set.

2009-02-10  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool_backends/sqlite.h:
	* glom/libglom/connectionpool_backends/sqlite.cc: Support dropping and
	changing columns, though changing doesn't yet seem to work reliably
	yet.

2009-02-10  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool_backends/sqlite.cc (recreate_table):
	Use get_value_type() to find out a value's not type, not get_g_type()
	which returns the GType the value stores if it's value type is GType.

	* glom/mode_design/fields/box_db_table_definition.cc (on_adddel_add):
	Don't call on_adddel_changed() just to store the field into the
	document, since on_adddel_changed() does a lot of unnecessary extra
	stuff such as calling change_columns() on the backend, which forces a
	whole table recreation with SQLite.

2009-02-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: insert_example_data(): Fixed my typo to fix the 
	build. Sorry.

2009-02-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/field.[h|cc]: get_gda_type(): 
	Renamed to get_gda_type_name(). Removed get_gda_g_type() because 
	we already have a static get_g_type_for_glom_type(). This gets rids of 
	the nasty switch block.
	* glom/base_db.cc: insert_example_data(), get_lookup_value(),
	  get_primary_key_is_in_foundset(): Adapted.

2009-02-09  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool.h:
	* glom/libglom/connectionpool.cc: Added set_server_operation_value(),